log/build_2024-04-29_00-08-07/imageprocess/stderr.log
  File "/home/iclab/Desktop/ros2/install/imageprocess/lib/python3.10/site-packages/imageprocess/image.py", line 56
    f       for color_label, color_range in self.color_ranges.items():  
            ^^^
SyntaxError: invalid syntax

